# cs100-project-Movie-Recommender

./: .gitignore  CMakeLists.txt  IMDB250Moviesv2.csv  README.md
data/: data.tsv  dataPrimary.csv
files/: Casts.tsv  Directors.tsv  Genres.tsv  Titles.tsv  Years.tsv
include/: ActorRecommend.h  DirectorRecommend.h  GenreRecommend.h  Menu.h  MovieData.h  MovieDatabase.h  MovieRecommender.h  RecommendationAlgorithm.h  YearRecommend.h
lib/: Database_test.cpp  Menu.cpp  MovieData.cpp  MovieDatabase.cpp  MovieRecommender.cpp  RecommendationAlgorithm.cpp  main.cpp  main2.cpp  parsing_algorithm.cpp
test/: GoogleTest.cpp
tests/: GoogleTest.cpp
